# ARP_convert

./: .git-blame-ignore-revs  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  arp_diagnosis_result.txt  arp_status_report.csv  blend_files_report.csv  cleanup_blend1.py  codex-setup.sh  copy_latest_blends_by_folder.py  pyproject.toml  scan_arp_status.py  scan_blend_files.py
.claude/: settings.json  settings.local.json
docs/: Architecture.md  AutoMappingPlan.md  Background.md  CodexReviewRequest.md  ConversionPlan.md  DEF_BoneSeparator.md  F11_Handoff.md  F12_ARP_NativeRetarget.md  F12_ExactMatch.md  FeaturePlan_v3.md  FeaturePlan_v4.md  FeaturePlan_v5.md  FoxTestChecklist.md  JiraStatusReport_2026-04-02.md  MCP_Recipes.md  MigrationInventory.csv  ProjectPlan.md  RegressionRunner.md  RetargetQualityDiagnosis.md  RigConversion_Plan_Summary.md  RigConversion_Plan_Technical.md  UnityBlendMapping.md  UserGuide.md  retarget-strip-plan.md  workflow-flowchart.md
mapping_profiles/: custom_quadruped.json
regression_fixtures/: example_roles.json
remap_presets/: custom_quadruped.bmap  rigify_quadruped.bmap
scripts/: 01_create_arp_rig.py  02_retarget_animation.py  03_batch_convert.py  _oneoff_match_blend_inventory.py  agent_convert_contract.py  arp_build_helpers.py  arp_cc_bones.py  arp_convert_addon.py  arp_def_separator.py  arp_fixture_io.py  arp_foot_guides.py  arp_mapping.py  arp_ops_bake_regression.py  arp_ops_build.py  arp_ops_preview.py  arp_ops_roles.py  arp_props.py  arp_retarget.py  arp_retarget_reference.py  arp_role_icons.py  arp_ui.py  (+14 more)
(+113 files in other folders)
